Added all things

--- a/restaurant.html
+++ b/restaurant.html
@@ -20,21 +20,21 @@
             <div class="img-container">
                 <a href="roots.html">
                     <img src="/images/roots.jpg" alt="roots">
-                    <h3>Roots</h3>
+                    <h3>Roots Natural Kitchen</h3>
                 </a>
             </div>
 
             <div class="img-container">
                 <a href="purple.html">
                     <img src="/images/purple.jpg" alt="purple bowl">
-                    <h3>Purple</h3>
+                    <h3>The Purple Bowl</h3>
                 </a>
             </div>
 
             <div class="img-container">
                 <a href="tropical.html">
                     <img src="/images/tropical.jpg" alt="tropical smoothie cafe">
-                    <h3>Tropical</h3>
+                    <h3>Tropical Smoothie Cafe</h3>
                 </a>
             </div>
 
@@ -48,7 +48,7 @@
             <div class="img-container">
                 <a href="clean.html">
                     <img src="/images/clean.jpg" alt="clean juice">
-                    <h3>Clean</h3>
+                    <h3>Clean Juice</h3>
                 </a>
             </div>
 
@@ -58,10 +58,11 @@
                     <h3>Cava</h3>
                 </a>
             </div>
+        </div>
 
-        <footer>
-            <p>NUTRIHEEL</p>
-        </footer>
+            <footer>
+                <p>NUTRIHEEL</p>
+            </footer>
 
 </body>
 </html>
