--- a/roots.html
+++ b/roots.html
@@ -23,7 +23,12 @@
 
         <div class="img-reservation">
             <img src="/images/roots.jpg" alt="roots">
-            <button type="button">Reserve Table</button>
+            <a href="form.html">
+                <button type="submit">
+                    Reserve
+                </button>
+            </a>
+            
         </div>
 
         <div class="about">
