--- a/tropical.html
+++ b/tropical.html
@@ -18,7 +18,7 @@
         </header>
 
         <div class="res-name">
-            <h1>Roots Natural Kitchen</h1>
+            <h1>Tropical Smoothie Cafe</h1>
         </div>
 
         <div class="img-reservation">
