--- a/restaurant.html
+++ b/restaurant.html
@@ -13,7 +13,7 @@
                 <img class="logo" src="images/leaf.png" alt="leaf">
                 <a href="index.html">Home</a>
                 <a href="restaurant.html">Restaurants</a>
-                <a href="mental.html">Mental Health</a>
+                <a href="mentalhealth.html">Mental Health</a>
             </div>
         </header>
        
