--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container">
         <header>
             <div class="navbar">
-                <img class="logo" src="images/leaf.png" alt="leaf">
+                <img class="logo" src="images/leaf.png" href = "index.html" alt="leaf">
                 <a href="index.html">Home</a>
                 <a href="restaurant.html">Restaurants</a>
-                <a href="mental.html">Mental Health</a>
+                <a href="mentalhealth.html">Mental Health</a>
             </div>
         </header>
         <div class="hero-image">
