--- a/restaurant.html
+++ b/restaurant.html
@@ -10,10 +10,15 @@
     <div class="container">
         <header>
             <div class="navbar">
-                <img class="logo" src="images/leaf.png" alt="leaf">
-                <a href="index.html">Home</a>
-                <a href="restaurant.html">Restaurants</a>
-                <a href="mentalhealth.html">Mental Health</a>
+                <div class="logo">
+                    <img src="images/leaf.png" alt="leaf">
+                </div>
+                <div class="nav-elements">
+                    <a href="index.html">Home</a>
+                    <a href="restaurant.html">Restaurants</a>
+                    <a href="mentalhealth.html">Mental Health</a>
+                </div>
+                
             </div>
         </header>
        
