--- a/asianmhc.html
+++ b/asianmhc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/activeminds.css">
+    <link rel="stylesheet" href="css/asianmhc.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair">
 </head>
 
@@ -20,22 +20,22 @@
         </header>
 
         <div class="org-name">
-            <h1>Active Minds</h1>
+            <h1>Asian Mental Health Collective</h1>
         </div>
 
         <div class="main-image">
-            <img src="/images/activeminds1.jpg" alt="activeminds1">          
+            <img src="/images/asianme.jpeg" alt="asianmental">          
         </div>
 
         <div class="content">
             <h1> About</h1>
-            <p>Active Minds at Carolina is the UNC-Chapel Hill chapter of Active Minds. Their projects increase students’ awareness of mental health conditions, provide information and resources regarding mental health and mental illness, encourage students to have conversations regarding their mental health, and serve as a liaison between students and the mental health community.</p>
+            <p>The Asian Mental Health Collective (AMHC) is dedicated to destigmatize mental health within the Asian community, recognizing and addressing unique challenges and cultural nuances. AMHC facilitates access to Asian therapists in the United States and Canada, connecting individuals with mental health professionals who share their cultural background. This approach aims to bridge the gap between traditional Asian values and the Western mental health framework.</p>
         </div>
 
         <div class="contact">
             <h2>Contact Information</h2>
             <p>Chapel Hill, NC 27514 </p>
-            <p><b>Email: </b>uncactiveminds@gmail.com</p>
+            <p><b>Email: </b>mha@gmail.com</p>
         </div>
 
     </div>
