--- a/caps.html
+++ b/caps.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/activeminds.css">
+    <link rel="stylesheet" href="css/caps.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair">
 </head>
 
@@ -20,22 +20,25 @@
         </header>
 
         <div class="org-name">
-            <h1>Active Minds</h1>
+            <h1>Counseling and Psychological Services</h1>
         </div>
 
         <div class="main-image">
-            <img src="/images/activeminds1.jpg" alt="activeminds1">          
+            <img src="/images/caps1.jpeg" alt="caps">          
         </div>
 
         <div class="content">
             <h1> About</h1>
-            <p>Active Minds at Carolina is the UNC-Chapel Hill chapter of Active Minds. Their projects increase students’ awareness of mental health conditions, provide information and resources regarding mental health and mental illness, encourage students to have conversations regarding their mental health, and serve as a liaison between students and the mental health community.</p>
+            <p>CAPS are dedicated centers that offer counseling and psychological support services tailored to the unique challenges and stressors faced by students during their academic journey. The primary focus of CAPS is to provide a safe and confidential space where students can explore and address a variety of mental health concerns. This can include academic stress, relationship issues, anxiety, depression, and other challenges commonly experienced in a university setting.</p>
+            <a href = "formcaps.html">
+            <button class = "button"> Book an appointment </button>
+            </a>
         </div>
 
         <div class="contact">
             <h2>Contact Information</h2>
             <p>Chapel Hill, NC 27514 </p>
-            <p><b>Email: </b>uncactiveminds@gmail.com</p>
+            <p><b>Email: </b>caps@unc.edu</p>
         </div>
 
     </div>
