--- a/mentalhealth.html
+++ b/mentalhealth.html
@@ -10,12 +10,17 @@
 <body>
     <div class="container">
         <header>
-            <div class="navbar">
+            <div class="logo-container">
                 <a href="index.html"><img class="logo" src="images/leaf.png" alt="leaf"></a>
+            </div>
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn">
+            </label>
+            <nav class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="restaurant.html">Restaurants</a>
                 <a href="mentalhealth.html">Mental Health</a>
-            </div>
+            </nav>
         </header>
         <div class="mentalhealthhero">
             <img src="images/mentalhealthnutriheelhome.jpeg" alt="Hero image for mental health">
@@ -32,15 +37,27 @@
             <h2 class="mentalhealthhub" >Mental Health Resource Hub</h2>
         </div> 
         <div class = "img1-container">
+            <a href = "activeminds.html">
             <img class="picsofmentalhealhhub" src="images/activeminds.png" alt="Active Minds logo">
+        </a>
+        <a href = "asianmhc.html">
             <img class="picsofmentalhealhhub" src="images/asianmentalhealth.jpeg" alt="Asian Mental Health Collective logo">
-            <img class="picsofmentalhealhhub"src="images/uncmentalhealthambass.jpeg" alt="UNC Mental Health Ambassador logo">
+        </a>
+        <a href = "uncambass.html">
+            <img class="picsofmentalhealhhub"src="images/uncmehaaaa.png" alt="UNC Mental Health Ambassador logo">
+        </a>
+        <a href = "saath.html">
             <img class="picsofmentalhealhhub" src="images/saath.png" alt="Saath logo">
+        </a>
+        <a href = "caps.html">
             <img class="picsofmentalhealhhub" src="images/caps.jpeg" alt="CAPS logo">
+        </a>
+        <a href = "naic.html">
             <img class="picsofmentalhealhhub" src="images/namiunc.jpeg" alt="NAMI UNC logo">
+        </a>
         </div> 
         <footer class = "footer">
-            <h2>NUTRIHEEL</h2>
+            <h2>NUTRIHEEL | made with lo</h2>
         </footer>
     </div>
 </body>
