--- a/naic.html
+++ b/naic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/activeminds.css">
+    <link rel="stylesheet" href="css/asianmhc.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair">
 </head>
 
@@ -18,24 +18,26 @@
                 <a href="mentalhealth.html">Mental Health</a>
             </div>
         </header>
-
+        
         <div class="org-name">
-            <h1>Active Minds</h1>
+            <h1>NAMI at UNC Chapel Hill</h1>
         </div>
 
         <div class="main-image">
-            <img src="/images/activeminds1.jpg" alt="activeminds1">          
+            <img src="/images/naminami.jpeg" alt="nami">          
         </div>
 
         <div class="content">
             <h1> About</h1>
-            <p>Active Minds at Carolina is the UNC-Chapel Hill chapter of Active Minds. Their projects increase students’ awareness of mental health conditions, provide information and resources regarding mental health and mental illness, encourage students to have conversations regarding their mental health, and serve as a liaison between students and the mental health community.</p>
+            <p>The National Alliance on Mental Illness (NAMI) at UNC-Chapel Hill is a part of the larger NAMI organization, which is dedicated to mental health support, education, and advocacy. NAMI at UNC focuses on raising awareness, providing support, and promoting education about mental health issues. This includes supporting individuals living with mental illness as well as their friends and family members.
+
+            </p>
         </div>
 
         <div class="contact">
             <h2>Contact Information</h2>
             <p>Chapel Hill, NC 27514 </p>
-            <p><b>Email: </b>uncactiveminds@gmail.com</p>
+            <p><b>Email: </b>nami@unc.edu</p>
         </div>
 
     </div>
