--- a/saath.html
+++ b/saath.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/activeminds.css">
+    <link rel="stylesheet" href="css/saath.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair">
 </head>
 
@@ -20,22 +20,22 @@
         </header>
 
         <div class="org-name">
-            <h1>Active Minds</h1>
+            <h1>SAATH at UNC-CH</h1>
         </div>
 
         <div class="main-image">
-            <img src="/images/activeminds1.jpg" alt="activeminds1">          
+            <img src="/images/saath1.png" alt="saath">          
         </div>
 
         <div class="content">
             <h1> About</h1>
-            <p>Active Minds at Carolina is the UNC-Chapel Hill chapter of Active Minds. Their projects increase students’ awareness of mental health conditions, provide information and resources regarding mental health and mental illness, encourage students to have conversations regarding their mental health, and serve as a liaison between students and the mental health community.</p>
+            <p>SAATH (South Asian Alliance for Mental Health) is a dedicated organization committed to increasing access to mental health resources within the South Asian community through a multifaceted approach encompassing education, activism, and storytelling. Recognizing the unique cultural nuances and challenges that individuals of South Asian descent may face in addressing mental health, SAATH plays a crucial role in bridging gaps and fostering a more supportive environment.  </p>
         </div>
 
         <div class="contact">
             <h2>Contact Information</h2>
             <p>Chapel Hill, NC 27514 </p>
-            <p><b>Email: </b>uncactiveminds@gmail.com</p>
+            <p><b>Email: </b>unc-chapelhill@wearesaath.org</p>
         </div>
 
     </div>
