--- a/uncambass.html
+++ b/uncambass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/activeminds.css">
+    <link rel="stylesheet" href="css/asianmhc.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair">
 </head>
 
@@ -18,24 +18,25 @@
                 <a href="mentalhealth.html">Mental Health</a>
             </div>
         </header>
-
+        
         <div class="org-name">
-            <h1>Active Minds</h1>
+            <h1>UNC-CH Mental Health Ambassadors</h1>
         </div>
 
         <div class="main-image">
-            <img src="/images/activeminds1.jpg" alt="activeminds1">          
+            <img src="/images/mhaa.png" alt="mentalhealth">          
         </div>
 
         <div class="content">
             <h1> About</h1>
-            <p>Active Minds at Carolina is the UNC-Chapel Hill chapter of Active Minds. Their projects increase students’ awareness of mental health conditions, provide information and resources regarding mental health and mental illness, encourage students to have conversations regarding their mental health, and serve as a liaison between students and the mental health community.</p>
+            <p>The mission of UNC Mental Health Ambassadors (MHA) is to promote conversation around mental health, destigmatize mental illness, facilitate support networks, and present educative programming on the campus of UNC-Chapel Hill. MHA members receive training on how to support peers struggling with mental health and work in committees to promote mental health at UNC through events, resource dissemination, and community-building. </p>
         </div>
 
         <div class="contact">
             <h2>Contact Information</h2>
             <p>Chapel Hill, NC 27514 </p>
-            <p><b>Email: </b>uncactiveminds@gmail.com</p>
+            <p><b>Email: </b>unc.mha@gmail.com</p>
+            <p><b> P: 919-924-5616</b></p>
         </div>
 
     </div>
