--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <div class="container">
         <header>
-            <div class="navbar">
-                <img class="logo" src="images/leaf.png" href = "index.html" alt="leaf">
+            <div class="logo-container">
+                <a href="index.html"><img class="logo" src="images/leaf.png" alt="leaf"></a>
+            </div>
+            <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="restaurant.html">Restaurants</a>
                 <a href="mentalhealth.html">Mental Health</a>
