--- a/restaurant.html
+++ b/restaurant.html
@@ -13,6 +13,10 @@
                 <div class="logo">
                     <img src="images/leaf.png" alt="leaf">
                 </div>
+                <div>
+                    <p>H</p>
+                </div>
+               
                 <div class="nav-elements">
                     <a href="index.html">Home</a>
                     <a href="restaurant.html">Restaurants</a>
