--- a/mentalhealth.html
+++ b/mentalhealth.html
@@ -36,25 +36,43 @@
             <p class = "listofstrat">Engage in regular physical exercise. Exercise is known to release endorphins, which can improve mood and reduce stress.</p>
             <h2 class="mentalhealthhub" >Mental Health Resource Hub</h2>
         </div> 
-        <div class = "img1-container">
-            <a href = "activeminds.html">
-            <img class="picsofmentalhealhhub" src="images/activeminds.png" alt="Active Minds logo">
-        </a>
-        <a href = "asianmhc.html">
-            <img class="picsofmentalhealhhub" src="images/asianmentalhealth.jpeg" alt="Asian Mental Health Collective logo">
-        </a>
-        <a href = "uncambass.html">
-            <img class="picsofmentalhealhhub"src="images/uncmehaaaa.png" alt="UNC Mental Health Ambassador logo">
-        </a>
-        <a href = "saath.html">
-            <img class="picsofmentalhealhhub" src="images/saath.png" alt="Saath logo">
-        </a>
-        <a href = "caps.html">
-            <img class="picsofmentalhealhhub" src="images/caps.jpeg" alt="CAPS logo">
-        </a>
-        <a href = "naic.html">
-            <img class="picsofmentalhealhhub" src="images/namiunc.jpeg" alt="NAMI UNC logo">
-        </a>
+        <div class="img1-container">
+            <div class="image-hover">
+                <a href="activeminds.html">
+                    <img class="picsofmentalhealhhub" src="images/activeminds.png" alt="Active Minds logo">
+                    <span class="hover-text">Active Minds</span>
+                </a>
+            </div>
+            <div class="image-hover">
+                    <a href="asianmhc.html">
+                        <img class="picsofmentalhealhhub" src="images/asianmentalhealth.jpeg" alt="Asian Mental Health Collective logo">
+                        <span class="hover-text">Asian Mental Health Collective</span>
+                    </a>
+            </div>
+            <div class="image-hover">
+                <a href="uncambass.html">
+                    <img class="picsofmentalhealhhub" src="images/uncmehaaaa.png" alt="UNC Mental Health Ambassador logo">
+                    <span class="hover-text">UNC Mental Health Ambassador</span>
+                </a>
+            </div>
+            <div class="image-hover">
+                <a href="saath.html">
+                    <img class="picsofmentalhealhhub" src="images/saath.png" alt="SAATH">
+                    <span class="hover-text">SAATH</span>
+                </a>
+            </div>
+            <div class="image-hover">
+                <a href="caps.html">
+                    <img class="picsofmentalhealhhub" src="images/caps.jpeg" alt="CAPS">
+                    <span class="hover-text">CAPS</span>
+                </a>
+            </div>
+            <div class="image-hover">
+                <a href="naic.html">
+                    <img class="picsofmentalhealhhub" src="images/namiwalks.jpeg" alt="NAMI">
+                    <span class="hover-text">NAMI</span>
+                </a>
+            </div>
         </div> 
         <footer class = "footer">
             <h2>NUTRIHEEL | made with lo</h2>
