--- a/mentalhealth.html
+++ b/mentalhealth.html
@@ -10,18 +10,16 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo-container">
-                <a href="index.html"><img class="logo" src="images/leaf.png" alt="leaf"></a>
-            </div>
-            <input class="menu-btn" type="checkbox" id="menu-btn" />
-            <label class="menu-icon" for="menu-btn">
-            </label>
-            <nav class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="restaurant.html">Restaurants</a>
-                <a href="mentalhealth.html">Mental Health</a>
-            </nav>
-        </header>
+            <a href="index.html"><img class="logo" src="images/leaf.png" alt="leaf"></a>
+        
+        <input class="menu-btn" type="checkbox" id="menu-btn" aria-label="Menu Button" />
+        <label class="menu-icon" for="menu-btn" aria-label="Toggle Menu"><span class="navicon"></span></label>
+        <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="restaurant.html">Restaurants</a></li>
+            <li><a href="mentalhealth.html">Mental Health</a></li>
+        </ul>            
+    </header>
         <div class="mentalhealthhero">
             <img src="images/mentalhealthnutriheelhome.jpeg" alt="Hero image for mental health">
         </div>
