--- a/activeminds.html
+++ b/activeminds.html
@@ -12,13 +12,16 @@
     <div class="container">
         <header>
             <a href="index.html"><img class="logo" src="images/leaf.png" alt="leaf"></a>
-            <div class="navbar">
-                <a href="index.html">Home</a>
-                <a href="restaurant.html">Restaurants</a>
-                <a href="mentalhealth.html">Mental Health</a>
-            </div>
-        </header>
-
+        
+        <input class="menu-btn" type="checkbox" id="menu-btn" aria-label="Menu Button" />
+        <label class="menu-icon" for="menu-btn" aria-label="Toggle Menu"><span class="navicon"></span></label>
+        <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="restaurant.html">Restaurants</a></li>
+            <li><a href="mentalhealth.html">Mental Health</a></li>
+        </ul>            
+    </header>
+    
         <div class="org-name">
             <h1>Active Minds</h1>
         </div>
