--- a/formcaps.html
+++ b/formcaps.html
@@ -11,13 +11,15 @@
 <body>
     <div class="container">
         <header>
-            <div class="navbar">
-                <img class="logo" src="images/leaf.png" alt="leaf">
-                <a href="index.html">Home</a>
-                <a href="restaurant.html">Restaurants</a>
-                <a href="mentalhealth.html">Mental Health</a>
-            </div>
-        </header>
+            <a href="index.html"><img class="logo" src="images/leaf.png" alt="leaf"></a>
+        <input class="menu-btn" type="checkbox" id="menu-btn" aria-label="Menu Button" />
+        <label class="menu-icon" for="menu-btn" aria-label="Toggle Menu"><span class="navicon"></span></label>
+        <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="restaurant.html">Restaurants</a></li>
+            <li><a href="mentalhealth.html">Mental Health</a></li>
+        </ul>            
+    </header>
     <div class="form-container">
         <form>
             <div class="form-group">
@@ -50,5 +52,9 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+    
+    <footer>
+        <p>NUTRIHEEL</p>
+    </footer>
 </body>
 </html>
