--- a/mentalhealth.html
+++ b/mentalhealth.html
@@ -73,7 +73,7 @@
             </div>
         </div> 
         <footer class = "footer">
-            <h2>NUTRIHEEL | made with lo</h2>
+            <h2>NUTRIHEEL</h2>
         </footer>
     </div>
 </body>
