--- a/saath.html
+++ b/saath.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/saath.css">
+    <link rel="stylesheet" href="css/activeminds.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair">
 </head>
 
@@ -12,13 +12,15 @@
     <div class="container">
         <header>
             <a href="index.html"><img class="logo" src="images/leaf.png" alt="leaf"></a>
-            <div class="navbar">
-                <a href="index.html">Home</a>
-                <a href="restaurant.html">Restaurants</a>
-                <a href="mentalhealth.html">Mental Health</a>
-            </div>
-        </header>
-
+        
+        <input class="menu-btn" type="checkbox" id="menu-btn" aria-label="Menu Button" />
+        <label class="menu-icon" for="menu-btn" aria-label="Toggle Menu"><span class="navicon"></span></label>
+        <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="restaurant.html">Restaurants</a></li>
+            <li><a href="mentalhealth.html">Mental Health</a></li>
+        </ul>            
+    </header>
         <div class="org-name">
             <h1>SAATH at UNC-CH</h1>
         </div>
