more changes and fixes

--- a/clean.html
+++ b/clean.html
@@ -9,13 +9,17 @@
 <body>
     <div class="container">
         <header>
-            <div class="navbar">
-                <img class="logo" src="images/leaf.png" alt="leaf">
-                <a href="index.html">Home</a>
-                <a href="restaurant.html">Restaurants</a>
-                <a href="mental.html">Mental Health</a>
-            </div>
-        </header>
+         
+            <a href="index.html"><img class="logo" src="images/leaf.png" alt="leaf"></a>
+        
+        <input class="menu-btn" type="checkbox" id="menu-btn" aria-label="Menu Button" />
+        <label class="menu-icon" for="menu-btn" aria-label="Toggle Menu"><span class="navicon"></span></label>
+        <ul class="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="restaurant.html">Restaurants</a></li>
+            <li><a href="mentalhealth.html">Mental Health</a></li>
+        </ul>            
+    </header>
 
         <div class="res-name">
             <h1>Roots Natural Kitchen</h1>
