--- a/activeminds.html
+++ b/activeminds.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="main-image">
-            <img src="/images/activeminds1.jpg" alt="activeminds1">          
+            <img src="images/activeminds1.jpg" alt="activeminds1">          
         </div>
 
         <div class="content">
