--- a/asianmhc.html
+++ b/asianmhc.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="main-image">
-            <img src="/images/asianme.jpeg" alt="asianmental">          
+            <img src="images/asianme.jpeg" alt="asianmental">          
         </div>
 
         <div class="content">
