--- a/caps.html
+++ b/caps.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="main-image">
-            <img src="/images/caps1.jpeg" alt="caps">          
+            <img src="images/caps1.jpeg" alt="caps">          
         </div>
 
         <div class="content">
