--- a/naic.html
+++ b/naic.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="main-image">
-            <img src="/images/naminami.jpeg" alt="nami">          
+            <img src="images/naminami.jpeg" alt="nami">          
         </div>
 
         <div class="content">
