--- a/saath.html
+++ b/saath.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="main-image">
-            <img src="/images/saath1.png" alt="saath">          
+            <img src="images/saath1.png" alt="saath">          
         </div>
 
         <div class="content">
