--- a/uncambass.html
+++ b/uncambass.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="main-image">
-            <img src="/images/mhaa.png" alt="mentalhealth">          
+            <img src="images/mhaa.png" alt="mentalhealth">          
         </div>
 
         <div class="content">
