--- a/restaurant.html
+++ b/restaurant.html
@@ -24,42 +24,42 @@
        
             <div class="img-container">
                 <a href="roots.html">
-                    <img src="/images/roots.jpg" alt="roots">
+                    <img src="images/roots.jpg" alt="roots">
                     <h3>Roots Natural Kitchen</h3>
                 </a>
             </div>
 
             <div class="img-container">
                 <a href="purple.html">
-                    <img src="/images/purple.jpg" alt="purple bowl">
+                    <img src="images/purple.jpg" alt="purple bowl">
                     <h3>The Purple Bowl</h3>
                 </a>
             </div>
 
             <div class="img-container">
                 <a href="tropical.html">
-                    <img src="/images/tropical.jpg" alt="tropical smoothie cafe">
+                    <img src="images/tropical.jpg" alt="tropical smoothie cafe">
                     <h3>Tropical Smoothie Cafe</h3>
                 </a>
             </div>
 
             <div class="img-container">
                 <a href="chopt.html">
-                    <img src="/images/chopt.png" alt="chopt">
+                    <img src="images/chopt.png" alt="chopt">
                     <h3>Chopt</h3>
                 </a>
             </div>
 
             <div class="img-container">
                 <a href="clean.html">
-                    <img src="/images/clean.jpg" alt="clean juice">
+                    <img src="images/clean.jpg" alt="clean juice">
                     <h3>Clean Juice</h3>
                 </a>
             </div>
 
             <div class="img-container">
                 <a href="cava.html">
-                    <img src="/images/cava.jpg" alt="cava">
+                    <img src="images/cava.jpg" alt="cava">
                     <h3>Cava</h3>
                 </a>
             </div>
