--- a/roots.html
+++ b/roots.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="img-reservation">
-            <img src="/images/roots.jpg" alt="roots">
+            <img src="images/roots.jpg" alt="roots">
             <a href="form.html">
                 <button type="submit">
                     Reserve
